; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/rocker/extr_rocker_main.c_rocker_cmd_set_port_settings_mtu_prep.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/rocker/extr_rocker_main.c_rocker_cmd_set_port_settings_mtu_prep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rocker_port = type { i32 }
%struct.rocker_desc_info = type { i32 }
%struct.rocker_tlv = type { i32 }

@ROCKER_TLV_CMD_TYPE = common dso_local global i32 0, align 4
@ROCKER_TLV_CMD_TYPE_SET_PORT_SETTINGS = common dso_local global i32 0, align 4
@EMSGSIZE = common dso_local global i32 0, align 4
@ROCKER_TLV_CMD_INFO = common dso_local global i32 0, align 4
@ROCKER_TLV_CMD_PORT_SETTINGS_PPORT = common dso_local global i32 0, align 4
@ROCKER_TLV_CMD_PORT_SETTINGS_MTU = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rocker_port*, %struct.rocker_desc_info*, i8*)* @rocker_cmd_set_port_settings_mtu_prep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rocker_cmd_set_port_settings_mtu_prep(%struct.rocker_port* %0, %struct.rocker_desc_info* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.rocker_port*, align 8
  %6 = alloca %struct.rocker_desc_info*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.rocker_tlv*, align 8
  store %struct.rocker_port* %0, %struct.rocker_port** %5, align 8
  store %struct.rocker_desc_info* %1, %struct.rocker_desc_info** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = bitcast i8* %10 to i32*
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %8, align 4
  %13 = load %struct.rocker_desc_info*, %struct.rocker_desc_info** %6, align 8
  %14 = load i32, i32* @ROCKER_TLV_CMD_TYPE, align 4
  %15 = load i32, i32* @ROCKER_TLV_CMD_TYPE_SET_PORT_SETTINGS, align 4
  %16 = call i64 @rocker_tlv_put_u16(%struct.rocker_desc_info* %13, i32 %14, i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %3
  %19 = load i32, i32* @EMSGSIZE, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %4, align 4
  br label %54

21:                                               ; preds = %3
  %22 = load %struct.rocker_desc_info*, %struct.rocker_desc_info** %6, align 8
  %23 = load i32, i32* @ROCKER_TLV_CMD_INFO, align 4
  %24 = call %struct.rocker_tlv* @rocker_tlv_nest_start(%struct.rocker_desc_info* %22, i32 %23)
  store %struct.rocker_tlv* %24, %struct.rocker_tlv** %9, align 8
  %25 = load %struct.rocker_tlv*, %struct.rocker_tlv** %9, align 8
  %26 = icmp ne %struct.rocker_tlv* %25, null
  br i1 %26, label %30, label %27

27:                                               ; preds = %21
  %28 = load i32, i32* @EMSGSIZE, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %4, align 4
  br label %54

30:                                               ; preds = %21
  %31 = load %struct.rocker_desc_info*, %struct.rocker_desc_info** %6, align 8
  %32 = load i32, i32* @ROCKER_TLV_CMD_PORT_SETTINGS_PPORT, align 4
  %33 = load %struct.rocker_port*, %struct.rocker_port** %5, align 8
  %34 = getelementptr inbounds %struct.rocker_port, %struct.rocker_port* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i64 @rocker_tlv_put_u32(%struct.rocker_desc_info* %31, i32 %32, i32 %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %30
  %39 = load i32, i32* @EMSGSIZE, align 4
  %40 = sub nsw i32 0, %39
  store i32 %40, i32* %4, align 4
  br label %54

41:                                               ; preds = %30
  %42 = load %struct.rocker_desc_info*, %struct.rocker_desc_info** %6, align 8
  %43 = load i32, i32* @ROCKER_TLV_CMD_PORT_SETTINGS_MTU, align 4
  %44 = load i32, i32* %8, align 4
  %45 = call i64 @rocker_tlv_put_u16(%struct.rocker_desc_info* %42, i32 %43, i32 %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %50

47:                                               ; preds = %41
  %48 = load i32, i32* @EMSGSIZE, align 4
  %49 = sub nsw i32 0, %48
  store i32 %49, i32* %4, align 4
  br label %54

50:                                               ; preds = %41
  %51 = load %struct.rocker_desc_info*, %struct.rocker_desc_info** %6, align 8
  %52 = load %struct.rocker_tlv*, %struct.rocker_tlv** %9, align 8
  %53 = call i32 @rocker_tlv_nest_end(%struct.rocker_desc_info* %51, %struct.rocker_tlv* %52)
  store i32 0, i32* %4, align 4
  br label %54

54:                                               ; preds = %50, %47, %38, %27, %18
  %55 = load i32, i32* %4, align 4
  ret i32 %55
}

declare dso_local i64 @rocker_tlv_put_u16(%struct.rocker_desc_info*, i32, i32) #1

declare dso_local %struct.rocker_tlv* @rocker_tlv_nest_start(%struct.rocker_desc_info*, i32) #1

declare dso_local i64 @rocker_tlv_put_u32(%struct.rocker_desc_info*, i32, i32) #1

declare dso_local i32 @rocker_tlv_nest_end(%struct.rocker_desc_info*, %struct.rocker_tlv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
